post.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post
  labels:
    app: post
spec:
  replicas: 2
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
      - name: post
        image: public.ecr.aws/p3r1h0x8/post:v1

---
apiVersion: v1
kind: Service
metadata:
  name: post
spec:
  selector:
    app: post
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
