post-route-path copy.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-post
spec:
  parentRefs:
  - name: demo
    sectionName: http
  rules:
  - backendRefs:
    - name: post
      kind: Service
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /api/posts
